<resources>
    <string name="app_name">ProjetRecette</string>
    <string name="title_home">Home</string>
    <string name="title_recipe">Recette</string>
    <string name="title_favorite">Favoris</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_login">Se Connecter</string>
    <string name="title_signup">Inscription</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_signout">Se déconnecter</string>
    <string name="title_information">Information</string>
    <string name="title_profil">Mon Profil</string>
    <string name="title_vos_recettes">Vos Recettes</string>
    <string name="title_parametres">Paramètres</string>
</resources>