<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group
        android:id="@+id/drawerUnlogged"
        android:checkableBehavior="single"
        android:visible="true">
        <item
            android:id="@+id/navigation_login"
            android:icon="@drawable/ic_baseline_account_box_24"
            android:title="@string/title_login" />

        <item
            android:id="@+id/navigation_signup"
            android:icon="@drawable/ic_baseline_person_add_24"
            android:title="@string/title_signup" />

        <item
            android:id="@+id/navigation_information"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/title_information" />
    </group>

    <group
        android:id="@+id/drawerLoggedIn"
        android:checkableBehavior="single"
        android:visible="false">

        <item
            android:id="@+id/navigation_profil"
            android:icon="@drawable/ic_baseline_account_box_24"
            android:title="@string/title_profil" />
        <item
            android:id="@+id/navigation_vos_recettes"
            android:icon="@drawable/ic_baseline_book_24"
            android:title="@string/title_vos_recettes" />
        <item
            android:id="@+id/navigation_parametres"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/title_parametres" />
        <item
            android:id="@+id/navigation_signout"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/title_signout" />


    </group>



</menu>